//cmd: protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/file.proto
syntax = "proto3";

option go_package = ".;proto";

service FileService {
  rpc SaveFile (stream SaveFileRequest) returns (SaveFileResponse);
}

message MetaData {
  FileType fileType = 2;
  string name = 1;
  string ext = 3;

  enum FileType {
    Message = 0;
    Completion = 1;
    CommissionRefImg = 2;
    Artwork = 3;
    Roof = 4;
    OpenCommission = 5;
    Profile = 6;
  }
}

message SaveFileRequest {
  oneof data {
    MetaData metaData = 1;
    bytes file = 2;
  }
}

message SaveFileResponse {
  string path = 1;
}